syntax = "proto3";

option csharp_namespace = "CatalogService.Api";
import "google/protobuf/any.proto";
import "google/api/annotations.proto";
import "Protos/common.proto";
import "Protos/product.proto";

//   curl -d '{"id":"123"}' http://DOMAIN_NAME/get

service BrandProtoService {
	rpc GetAsync(GrpcIntModel) returns (GrpcBrandModel) {
		option (google.api.http) = {
		  get: "/brand/get"
		  body: '*'
		};
	}

	rpc GetAllAsync(GrpcEmptyModel) returns (ListGrpcBrandModel) {
		option (google.api.http) = {
		  get: "/brand/getall"
		  body: '*'
		};
	}

	rpc GetAllPagedAsync(GrpcPagingModel) returns (ListGrpcBrandModel) {
		option (google.api.http) = {
		  get: "/brand/getall-paged"
		  body: '*'
		};
	}

	rpc GetAllWithProductsAsync(GrpcEmptyModel) returns (ListGrpcBrand) {
		option (google.api.http) = {
		  get: "/brand/getall-with-products"
		  body: '*'
		};
	}
}

// ENTITY MODELS

message ListGrpcBrand {
	repeated GrpcBrand brands = 1;
}

message GrpcBrand {
	string name = 1;
	string description = 2;

	repeated GrpcProduct products = 3;
}

// NEEDED MODELS

message ListGrpcBrandModel {
	repeated GrpcBrandModel brands = 1;
}

message GrpcBrandModel {
	string name = 1;
	string description = 2;

}